--- a/.gitignore
+++ b/.gitignore
@@ -28,4 +28,5 @@ gradle-app.setting
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
-.idea
+.idea/
+*.iml
