--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 group 'io.riddles'
-version '1.2.0'
+version '1.3.0'
 
 apply plugin: 'groovy'
 apply plugin: 'java'
@@ -41,6 +41,8 @@ repositories {
 
 dependencies {
     compile group: 'org.json', name: 'json', version: '20160212'
+    compile group: 'com.amazonaws', name: 'aws-java-sdk', version: '1.7.13'
+    compile 'org.mongodb:mongo-java-driver:2.13.3'
     testCompile 'org.codehaus.groovy:groovy-all:2.4.1'
     testCompile "org.spockframework:spock-core:1.0-groovy-2.4"
     testCompile group: 'cglib', name: 'cglib-nodep', version: '3.2.2'
