changed the way random seed works [t:10m]

--- a/wrapper-commands.json
+++ b/wrapper-commands.json
@@ -3,7 +3,8 @@
     "timebankMax": 10000,
     "timePerMove": 100,
     "maxTimeouts": 2,
-    "resultFile": "./resultfile.json"
+    "resultFile": "./resultfile.json",
+    "debug": true
   },
   "match": {
     "bots": [{
@@ -12,7 +13,13 @@
       "command": "java -cp /home/jim/workspace/bookinggame-starter-bot/out/production/bookinggame-starter-bot bot.BotStarter"
     }],
     "engine": {
-      "command": "java -jar /home/jim/workspace/bookinggame-engine/build/libs/bookinggame-2.0.1.jar"
+      "command": "java -jar /home/jim/workspace/bookinggame-engine/build/libs/bookinggame-2.0.3.jar",
+      "configuration": {
+        "seed": {
+          "value": "cd48f740-b160-4e25-aee8-7d64768ac3d3",
+          "type": "String"
+        }
+      }
     }
   }
 }
